@@ -8,7 +8,25 @@
     <copy file="replaceregexp.properties" tofile="test.properties" />
   </target>
 
+  <target name="setup-nl">
+    <copy file="replaceregexp2.properties" tofile="test.properties" />
+  </target>
+
   <target name="testReplace" depends="setup">
+    <replaceregexp file="test.properties" byline="true">
+      <regexp pattern="Old(.*)=(.*)" />
+      <substitution expression="NewProp=\1\2" />
+    </replaceregexp>
+  </target>
+
+  <target name="testDontAddNewline1" depends="setup-nl">
+    <replaceregexp file="test.properties" byline="false">
+      <regexp pattern="Old(.*)=(.*)" />
+      <substitution expression="NewProp=\1\2" />
+    </replaceregexp>
+  </target>
+
+  <target name="testDontAddNewline2" depends="setup-nl">
     <replaceregexp file="test.properties" byline="true">
       <regexp pattern="Old(.*)=(.*)" />
       <substitution expression="NewProp=\1\2" />
