@@ -53,25 +53,23 @@
  */
 package org.apache.tools.ant.taskdefs.optional;
 
-import org.apache.tools.ant.BuildException;
-import org.apache.tools.ant.DirectoryScanner;
-import org.apache.tools.ant.Project;
-import org.apache.tools.ant.Task;
-import org.apache.tools.ant.util.regexp.Regexp;
-import org.apache.tools.ant.types.RegularExpression;
-import org.apache.tools.ant.types.Substitution;
-import org.apache.tools.ant.types.FileSet;
-import org.apache.tools.ant.util.FileUtils;
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
-import java.io.LineNumberReader;
 import java.io.PrintWriter;
-
 import java.util.Vector;
+import org.apache.tools.ant.BuildException;
+import org.apache.tools.ant.DirectoryScanner;
+import org.apache.tools.ant.Project;
+import org.apache.tools.ant.Task;
+import org.apache.tools.ant.types.FileSet;
+import org.apache.tools.ant.types.RegularExpression;
+import org.apache.tools.ant.types.Substitution;
+import org.apache.tools.ant.util.FileUtils;
+import org.apache.tools.ant.util.regexp.Regexp;
 
 /**
  * Performs regular expression string replacements in a text
@@ -285,10 +283,11 @@ public class ReplaceRegExp extends Task {
                                String input,
                                int options) {
         String res = input;
-        Regexp regexp = r.getRegexp(project);
+        Regexp regexp = r.getRegexp(getProject());
 
         if (regexp.matches(input, options)) {
-            res = regexp.substitute(input, s.getExpression(project), options);
+            res = regexp.substitute(input, s.getExpression(getProject()), 
+                                    options);
         }
 
         return res;
@@ -314,8 +313,8 @@ public class ReplaceRegExp extends Task {
 
             boolean changes = false;
 
-            log("Replacing pattern '" + regex.getPattern(project) + 
-                "' with '" + subs.getExpression(project) +
+            log("Replacing pattern '" + regex.getPattern(getProject()) +
+                "' with '" + subs.getExpression(getProject()) +
                 "' in '" + f.getPath() + "'" +
                 (byline ? " by line" : "") +
                 (flags.length() > 0 ? " with flags: '" + flags + "'" : "") +
@@ -323,18 +322,77 @@ public class ReplaceRegExp extends Task {
                 Project.MSG_VERBOSE);
 
             if (byline) {
-                LineNumberReader lnr = new LineNumberReader(br);
+                StringBuffer linebuf = new StringBuffer();
                 String line = null;
+                String res = null;
+                int c;
+                boolean hasCR = false;
 
-                while ((line = lnr.readLine()) != null) {
-                    String res = doReplace(regex, subs, line, options);
+                do {
+                    c = br.read();
 
-                    if (!res.equals(line)) {
-                        changes = true;
+                    if (c == '\r') {
+                        if (hasCR) {
+                            // second CR -> EOL + possibly empty line
+                            line = linebuf.toString();
+                            res  = doReplace(regex, subs, line, options);
+
+                            if (!res.equals(line)) {
+                                changes = true;
+                            }
+
+                            pw.print(res);
+                            pw.print('\r');
+
+                            linebuf.setLength(0);
+                            // hasCR is still true (for the second one)
+                        } else {
+                            // first CR in this line
+                            hasCR = true;
+                        }
                     }
+                    else if (c == '\n') {
+                        // LF -> EOL
+                        line = linebuf.toString();
+                        res  = doReplace(regex, subs, line, options);
 
-                    pw.println(res);
-                }
+                        if (!res.equals(line)) {
+                            changes = true;
+                        }
+
+                        pw.print(res);
+                        if (hasCR) {
+                            pw.print('\r');
+                            hasCR = false;
+                        }
+                        pw.print('\n');
+
+                        linebuf.setLength(0);
+                    } else { // any other char
+                        if ((hasCR) || (c < 0)) {
+                            // Mac-style linebreak or EOF (or both)
+                            line = linebuf.toString();
+                            res  = doReplace(regex, subs, line, options);
+
+                            if (!res.equals(line)) {
+                                changes = true;
+                            }
+
+                            pw.print(res);
+                            if (hasCR) {
+                                pw.print('\r');
+                                hasCR = false;
+                            }
+
+                            linebuf.setLength(0);
+                        }
+
+                        if (c >= 0) {
+                            linebuf.append((char) c);
+                        }
+                    }
+                } while (c >= 0);
+
                 pw.flush();
             } else {
                 int flen = (int) f.length();
@@ -355,7 +413,7 @@ public class ReplaceRegExp extends Task {
                     changes = true;
                 }
 
-                pw.println(res);
+                pw.print(res);
                 pw.flush();
             }
 
